# auto-graph-of-thoughts

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
auto_graph_of_thoughts/agent/: rl_model_params.py  train_agent.py
auto_graph_of_thoughts/baseline/: __init__.py  baseline_config.py  baseline_result.py  baseline_strategy.py  baseline_strategy_exception.py  graph_generator.py  input_output_baseline_strategy.py  random_baseline_strategy.py  simulated_annealing_baseline_config.py  simulated_annealing_baseline_strategy.py
auto_graph_of_thoughts/baseline/model/: baseline_iteration_result.py  baseline_meta_info.py  baseline_result_summary.py
auto_graph_of_thoughts/controller/: continuous_graph_controller.py  layer_action_result.py
auto_graph_of_thoughts/env/: __init__.py  action_type.py  create_vec_env.py  dict_obs_projection_wrapper.py  discrete_obs_projection_wrapper.py  graph_observation_component.py  graph_of_thoughts_env.py  graph_step_reward.py  graph_step_reward_version.py  observation_component.py  optimal_only_graph_of_thoughts_env.py
auto_graph_of_thoughts/env/wrapper/: env_wrapper_exception.py
auto_graph_of_thoughts/experiment/: __init__.py  agent_evaluation.py  agent_evaluation_summary.py  evaluate_agent.py  experiment.py  experiment_configuration.py  experiment_task_type.py  experiment_task_type_lookup_exception.py  generate_init_state.py  generate_init_state_count_keywords.py  generate_init_state_sort_list.py  generate_init_state_sum_list.py  language_model_simulation_type.py  visualization_utils.py
auto_graph_of_thoughts/language_model/: __init__.py  simulated_chat_gpt_count_keywords.py  simulated_chat_gpt_intersect_set.py  simulated_chat_gpt_merge_docs.py  simulated_chat_gpt_sort_list.py  simulated_chat_gpt_sum_list.py  simulated_language_model_exception.py
auto_graph_of_thoughts/rl/: q_learning.py
auto_graph_of_thoughts/space/: bool_space.py  discrete_space.py  multi_discrete_space.py  optional_bool_space.py  ordinal_discrete_space.py
auto_graph_of_thoughts/tasks/: count_keywords.py  intersect_set.py  merge_docs.py  sort_list.py  sum_list.py
notebooks/: auto_got_1_a2c.ipynb  auto_got_1_ppo.ipynb  auto_got_2_1_a2c.ipynb  auto_got_2_1_ppo.ipynb  auto_got_2_2_ppo.ipynb  auto_got_2_3_ppo.ipynb  auto_got_2_4_ppo.ipynb  auto_got_demo.ipynb  chatgpt_capability_evaluation_sum_list.ipynb  manual_got.ipynb  q_learning.ipynb  reward_shaping.ipynb  simple_ppo.ipynb
notebooks/chatgpt_capability_evaluation/: chatgpt_capability_evaluation_sum_list.ipynb
notebooks/lm_capability_evaluation/sum_list/: chatgpt_capability_evaluation_sum_list_op_split.ipynb  chatgpt_capability_evaluation_sum_list_op_sum.ipynb
notebooks/manual/: manual_got_count_keywords.ipynb  manual_got_intersect_set.ipynb  manual_got_merge_docs.ipynb  manual_got_sort_list.ipynb  manual_got_sum_list.ipynb
notebooks/rl_initial/: auto_got_1_ppo.ipynb  auto_got_2_1_a2c.ipynb  auto_got_2_1_ppo.ipynb  auto_got_2_2_ppo.ipynb  auto_got_2_3_ppo.ipynb  auto_got_2_4_ppo.ipynb
notebooks/rl_tasks/: auto_got_3_1_ppo_sum_list.ipynb  auto_got_3_2_ppo_sort_list.ipynb  auto_got_3_3_ppo_count_keywords.ipynb  auto_got_3_4_ppo_intersect_set.ipynb  auto_got_3_5_ppo_merge_docs.ipynb
pure_graph_of_thoughts/api/controller/: __init__.py  complete_graph_controller.py  controller.py  controller_exception.py  graph_of_operations_execution.py  iterative_graph_controller.py
pure_graph_of_thoughts/api/graph/: __init__.py  graph.py  graph_of_operations.py  graph_schema.py  node.py  node_schema.py
pure_graph_of_thoughts/api/id/: __init__.py  identifiable.py
pure_graph_of_thoughts/api/language_model/: __init__.py  example.py  language_model.py  language_model_exception.py  prompt.py
pure_graph_of_thoughts/api/operation/: __init__.py  complexity.py  evaluator.py  operation.py  operation_key.py  operation_registry.py  operation_type.py
pure_graph_of_thoughts/api/schema/: __init__.py  json_schema_encoder.py  schema.py  schema_exception.py  schema_type_map.py
pure_graph_of_thoughts/api/seal/: __init__.py  mutating.py  sealed_exception.py
pure_graph_of_thoughts/api/state/: state.py
pure_graph_of_thoughts/api/task/: __init__.py  (+3 more)
pure_graph_of_thoughts/controller/: __init__.py  complete_graph_controller.py  iterative_graph_controller.py
pure_graph_of_thoughts/examples/: sum.py  sum_list.py
pure_graph_of_thoughts/language_model/: __init__.py  chatgpt.py  mock_language_model.py  simulated_language_model.py
pure_graph_of_thoughts/visualization/: __init__.py  graph_visualizer.py  plot_graph.py
reinforced_graph_of_thoughts/agent/: experiment_params.py  rl_model_params.py
reinforced_graph_of_thoughts/baseline/: baseline_strategy.py  graph_generator.py  input_output_baseline_strategy.py  random_baseline_strategy.py
reinforced_graph_of_thoughts/controller/: __init__.py  continuous_graph_controller.py
reinforced_graph_of_thoughts/env/: __init__.py  action_type.py  create_vec_env.py  graph_step_reward.py  graph_step_reward_version.py  layer_action.py
reinforced_graph_of_thoughts/experiment/: agent_evaluation_summary.py  episode.py  evaluation_summary_utils.py  experiment.py  experiment_configuration.py  experiment_task_type.py  generate_init_state_count_keywords.py  generate_init_state_intersect_set.py  generate_init_state_merge_docs.py  generate_init_state_sum_list.py  language_model_simulation_type.py  visualization_utils.py
reinforced_graph_of_thoughts/language_model/: __init__.py  simulated_chat_gpt_intersect_set.py  simulated_chat_gpt_sort_list.py  simulated_chat_gpt_sum_list.py
reinforced_graph_of_thoughts/obs/: __init__.py  observation_component.py
reinforced_graph_of_thoughts/space/: __init__.py  multi_space.py  transforming_space.py
reinforced_graph_of_thoughts/tasks/: count_keywords.py  intersect_set.py  merge_docs.py  sum_list.py
scripts/: auto_got_3_1_ppo_sum_list.py  auto_got_3_2_ppo_sort_list.py  auto_got_3_3_ppo_count_keywords.py  auto_got_3_4_ppo_intersect_set.py  auto_got_3_5_ppo_merge_docs.py  auto_got_train_tasks.py
(+35 files in other folders)
