[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-graph-of-thoughts"
dynamic = ["version"]
dependencies = [
    "openai>=1.12.0,<2.0.0",
    "backoff>=2.2.1,<3.0.0"
]

requires-python = ">=3.11"
authors = [
    { name = "Manuel Riesen", email = "manuelnoah.riesen@students.bfh.ch" }
]
maintainers = [
    { name = "Manuel Riesen", email = "manuelnoah.riesen@students.bfh.ch" }
]
description = "Automated Graph of Thoughts"
readme = "README.md"
license-files = { paths = ["LICENSE"] }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.optional-dependencies]
visualization = [
    "matplotlib>=3.8.3,<4.0.0",
    "networkx>=3.2.1,<4.0.0",
    "types-networkx>=3.2.1,<4.0.0"
]
visualization-dot = [
    "pygraphviz>=1.12,<2.0"
]

[tool.hatch.version]
path = "__about__.py"

[tool.coverage.paths]
pure_graph_of_thoughts = ["pure_graph_of_thoughts"]
auto_graph_of_thoughts = ["auto_graph_of_thoughts"]

[tool.hatch.envs.types]
dependencies = [
    "mypy>=1.8.0,<2.0.0"
]
features = [
    "visualization"
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:pure_graph_of_thoughts auto_graph_of_thoughts}"

[tool.hatch.build.targets.sdist]
exclude = [
    ".gitlab-ci.yml",
    ".idea/"
]

[tool.hatch.build.targets.wheel]
packages = [
    "pure_graph_of_thoughts",
    "auto_graph_of_thoughts"
]
exclude = [
    "pure_graph_of_thoughts/examples/"
]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_any_generics = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
warn_return_any = true

[project.urls]
Repository = "https://gitlab.ti.bfh.ch/riesm1-bathesis/auto-graph-of-thoughts.git"
