[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-graph-of-thoughts"
dynamic = ["version"]
dependencies = [
    "pure-graph-of-thoughts>=1.3.0,<2.0.0",
    "gymnasium>=0.29.1,<1.0.0",
    "numpy>=1.26.4,<2.0.0"
]

requires-python = ">=3.11"
authors = [
    { name = "Manuel Riesen", email = "manuelnoah.riesen@students.bfh.ch" }
]
maintainers = [
    { name = "Manuel Riesen", email = "manuel.riesen0@gmail.com" }
]
description = "Automated Graph of Thoughts"
readme = "README.md"
license-files = { paths = ["LICENSE"] }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.1.0,<2.0.0",
    "stable-baselines3>=2.2.1,<3.0.0",
    "tensorboard>=2.16.2,<3.0.0",
    "plotly>=5.20.0,<6.0.0",
    "pandas>=2.2.1,<3.0.0",
    "pure-graph-of-thoughts[visualization,visualization-dot]>=1.3.0,<2.0.0"
]

[tool.hatch.version]
path = "__about__.py"

[tool.coverage.paths]
auto_graph_of_thoughts = ["auto_graph_of_thoughts"]

[tool.hatch.envs.types]
dependencies = [
    "mypy>=1.8.0,<2.0.0"
]

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:auto_graph_of_thoughts}"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
    ".idea/"
]

[tool.hatch.build.targets.wheel]
packages = [
    "auto_graph_of_thoughts"
]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
disallow_any_unimported = true
disallow_any_generics = true
warn_redundant_casts = true
warn_no_return = true
warn_unreachable = true
warn_return_any = true

[project.urls]
Repository = "https://github.com/mriesen/auto-graph-of-thoughts.git"
